# wellspot-graph-client

./: Cosmos_Wellspot_Client.ipynb  README.md  pyproject.toml  test.txt
nbs/: 00_client.ipynb  index.ipynb
wellspot_cosmos_client/: __init__.py  _modidx.py  client.py
wellspot_cosmos_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
