[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "wellspot_cosmos_client"
dynamic = ["version"]
description = "Read-only Cosmos Gremlin client for WellSpot"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "MUV"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python', 'cosmos', 'gremlin']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['azure-cosmos', 'azure-identity', 'azure-keyvault-secrets', 'gremlinpython', 'pandas']

[project.urls]
Repository = "https://github.com/MUV/WellSpot"
Documentation = "https://MUV.github.io/WellSpot"

[project.entry-points.nbdev]
wellspot_cosmos_client = "wellspot_cosmos_client._modidx:d"

[project.optional-dependencies]
dev = ['nbdev']

[tool.setuptools.dynamic]
version = {attr = "wellspot_cosmos_client.__version__"}

[tool.setuptools.packages.find]
include = ["wellspot_cosmos_client"]

[tool.nbdev]
title = 'WellSpot Cosmos Client'
